--- a/src/utilities/CMakeLists.txt
+++ b/src/utilities/CMakeLists.txt
@@ -73,6 +73,7 @@ set(${dir_EXE_SOURCES}
         write_sinogram_to_txt.cxx
         find_sum_projection_of_viewgram_and_sinogram.cxx
         separate_true_from_random_scatter_for_necr.cxx
+        stir_timings.cxx
 )
 
 if (HAVE_ITK)
