[CMake] require v3.12 on Windows
This is to avoid having to write some more work-arounds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,11 @@
 # See STIR/LICENSE.txt for details
 
 # cmake file for building STIR. See the STIR User's Guide and http://www.cmake.org.
-cmake_minimum_required(VERSION 3.1.0)
-
-
-# avoid warning about WIN32 no longer defined in CYGWIN
-set(CMAKE_LEGACY_CYGWIN_WIN32 0) 
+if (CMAKE_HOST_WIN32)
+  cmake_minimum_required(VERSION 3.12.0)
+else()
+  cmake_minimum_required(VERSION 3.1.0)
+endif()
 
 # enable ccache https://ccache.samba.org/
 find_program(CCACHE_PROGRAM ccache)
