ignore changes in CITATION>cff in most CI

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,6 +3,7 @@ shallow_clone: true
 skip_commits:
   files:
     - .github/**/*
+    - 'CITATION.cff'
     - '**/*.md'
     - '**/*.html'
     - '**/*.htm'
