--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -5,6 +5,7 @@ on:
     branches: [ master ]
     paths-ignore:
       - '.appveyor.yml'
+      - 'CITATION.cff'
       - '**/*.md'
       - '**/*.html'
       - '**/*.htm'
@@ -14,6 +15,7 @@ on:
     branches: [ master ]
     paths-ignore:
       - '.appveyor.yml'
+      - 'CITATION.cff'
       - '**/*.md'
       - '**/*.html'
       - '**/*.htm'
