--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -320,7 +320,7 @@ jobs:
             ./run_scatter_tests.sh
             ./run_test_zoom_image.sh
             ./run_ML_norm_tests.sh
-            if [[ $BUILD_FLAGS == *"DDISABLE_CERN_ROOT=0"* ]]; then ./run_root_GATE.sh; fi
+            if test "${{matrix.ROOT}}XX" == "ONXX"; then ./run_root_GATE.sh; fi
             ./run_tests_modelling.sh
             cd ${GITHUB_WORKSPACE}/recon_test_pack/SPECT
             ./run_SPECT_tests.sh
