[CMake] avoid CMP0023 warning
add PUBLIC in most target_link_libraries statements (except if PRIVATE)_

--- a/src/IO/CMakeLists.txt
+++ b/src/IO/CMakeLists.txt
@@ -83,33 +83,33 @@ endif()
 include(stir_lib_target)
 
 if (LLN_FOUND)
-  target_link_libraries(IO ${LLN_LIBRARIES})
+  target_link_libraries(IO PUBLIC ${LLN_LIBRARIES})
 endif()
 
 if (CERN_ROOT_FOUND)
   target_include_directories(IO PRIVATE ${CERN_ROOT_INCLUDE_DIRS})
   if (TARGET ROOT::Tree)
-   target_link_libraries(IO ROOT::Tree)
+   target_link_libraries(IO PUBLIC ROOT::Tree)
   else()
-   target_link_libraries(IO ${CERN_ROOT_LIBRARIES})
+   target_link_libraries(IO PUBLIC ${CERN_ROOT_LIBRARIES})
   endif()
 endif()
 
 if (HAVE_HDF5)
-  target_link_libraries(IO ${HDF5_CXX_LIBRARIES})
+  target_link_libraries(IO PUBLIC ${HDF5_CXX_LIBRARIES})
 endif()
 
 if (AVW_FOUND)
-  target_link_libraries(IO ${AVW_LIBRARIES})
+  target_link_libraries(IO PUBLIC ${AVW_LIBRARIES})
 endif()
 
 if (HAVE_ITK)
-  target_link_libraries(IO ITKCommon ${ITK_LIBRARIES})
+  target_link_libraries(IO PUBLIC ITKCommon ${ITK_LIBRARIES})
 endif()
 
 if (UPENN_FOUND)
   target_include_directories(IO PUBLIC ${UPENN_INCLUDE_DIR})
-  target_link_libraries(IO ${UPENN_libsss_tof} ${UPENN_libfit} ${UPENN_libdist} ${UPENN_libgeom}
+  target_link_libraries(IO PUBLIC ${UPENN_libsss_tof} ${UPENN_libfit} ${UPENN_libdist} ${UPENN_libgeom}
         ${UPENN_liblor} ${UPENN_liblist} ${UPENN_libmhdr} ${JANSSON_LIBRARY} ${ZLIB_LIBRARY_RELEASE}
 ${UPENN_libimagio} ${UPENN_libimagio++})
 endif()
@@ -119,7 +119,7 @@ if (HAVE_JSON)
   # Unfortunately, the simple line below exports the dependency while this is really not
   # necessary.
   #
-  # target_link_libraries(IO PRIVATE "$<BUILD_INTERFACE:nlohmann_json::nlohmann_json>")
+  # target_link_libraries(IO PUBLIC PRIVATE "$<BUILD_INTERFACE:nlohmann_json::nlohmann_json>")
 
   # So, we currently use an ugly work-around from
   # https://gitlab.kitware.com/cmake/cmake/-/issues/15415#note_334852
@@ -131,5 +131,5 @@ if (HAVE_JSON)
 endif()
 
 # currently needed for ParametricDensity (TODO get rid of this somehow?)
-target_link_libraries(IO modelling_buildblock )
-target_link_libraries(IO listmode_buildblock)
+target_link_libraries(IO PUBLIC modelling_buildblock )
+target_link_libraries(IO PUBLIC listmode_buildblock)
