--- a/src/experimental/buildblock/CMakeLists.txt
+++ b/src/experimental/buildblock/CMakeLists.txt
@@ -8,5 +8,5 @@ set(${dir_LIB_SOURCES}
 
 include(stir_lib_target)
 
-target_link_libraries(${dir} buildblock)
+target_link_libraries(${dir} PUBLIC buildblock)
 
