--- a/src/Doxyfile.in
+++ b/src/Doxyfile.in
@@ -853,7 +853,7 @@ EXAMPLE_RECURSIVE      = NO
 # that contain images that are to be included in the documentation (see the
 # \image command).
 
-IMAGE_PATH             = @PROJECT_SOURCE_DIR@/../doximages
+IMAGE_PATH             = @PROJECT_SOURCE_DIR@/doximages
 
 # The INPUT_FILTER tag can be used to specify a program that doxygen should
 # invoke to filter for each input file. Doxygen will invoke the filter program
