[SWIG] fix listmode event processing
- needed to import ListEvent and ListTime BEFORE ListRecord (SWIG BUG)
- add CListModeData, just in case
- added example and basic test

--- a/src/swig/CMakeLists.txt
+++ b/src/swig/CMakeLists.txt
@@ -108,6 +108,7 @@ set(swig_stir_dependencies
   stir_objectivefunctions.i
   stir_priors.i
   stir_projdata.i
+  stir_listmode.i
   stir_projectors.i
   stir_reconstruction.i
   stir_shapes.i
