--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -354,7 +354,7 @@ jobs:
     - name: Setup tmate session if triggered
       uses: mxschmitt/action-tmate@v3
       timeout-minutes: 15
-      if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.debug_enabled }}
+      if: ${{ github.event_name == 'workflow_dispatch' && inputs.debug_enabled }}
 
     - name: examples
       shell: bash
