[CMake] use NiftyPET 2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -183,8 +183,8 @@ endif()
 
 if(NOT DISABLE_NiftyPET_PROJECTOR)
   if (CUDAToolkit_FOUND)
-    find_package(NiftyPET)
-    if (NiftyPET_FOUND)
+    find_package(NiftyPETnipet COMPONENTS mmr_auxe mmr_lmproc petprj REQUIRED)
+    if (NiftyPETnipet_FOUND)
       set(STIR_WITH_NiftyPET_PROJECTOR ON)
     endif()
   endif()
