--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -166,7 +166,7 @@ jobs:
           echo CC="$CC" >> $GITHUB_ENV
           echo CXX="$CXX" >> $GITHUB_ENV
 
-    - if: ${{ ! matrix.cuda_version == '0' }}
+    - if: matrix.cuda_version != '0'
       uses: Jimver/cuda-toolkit@v0.2.11
       id: cuda-toolkit
       with:
@@ -246,6 +246,7 @@ jobs:
              export HMUDIR=${GITHUB_WORKSPACE}/mmr_hardwareumaps
              python -m pip install "nipet>=2"
              niftypet_cmake_prefix=$(python -c "from niftypet.nipet import cmake_prefix; print(cmake_prefix)")
+             ls -R "$niftypet_cmake_prefix"
              echo NiftyPET_PREFIX="$niftypet_cmake_prefix" >> $GITHUB_ENV
           fi
 
@@ -332,6 +333,10 @@ jobs:
           # don't run all of them in Debug mode as it takes too long
           if test ${BUILD_TYPE} = Debug; then
               EXCLUDE="-E test_data_processor_projectors|test_export_array|test_ArcCorrection|test_blocks_on_cylindrical_projectors"
+          fi
+          if test ${{matrix.cuda_version}} != "0"
+              # No CUDA drivers on GitHub Actions
+              EXCLUDE="${EXCLUDE}|parallelproj|NiftyPET|test_blocks_on_cylindrical_projectors"
           fi
           ctest --output-on-failure -C ${BUILD_TYPE} ${EXCLUDE}
 
