--- a/.gitattributes
+++ b/.gitattributes
@@ -12,6 +12,8 @@
 *.v     -text -diff
 *.s     -text -diff
 *.scn     -text -diff
+*.l     -text -diff
+*.root  -text -diff
 *.gz     -text -diff
 *.nii     -text -diff
 *.sh    eol=lf
